add swgger GET GET/id POST
